compiler/testData/cli/jvm/enumEntriesNotEnabled.out
warning: ATTENTION!
This build uses unsafe internal compiler arguments:

-XXLanguage:-EnumEntries

This mode is not recommended for production use,
as no stability/compatibility guarantees are given on
compiler or generated code. Use it at your own risk!

compiler/testData/cli/jvm/enumEntriesNotEnabled.kt:7:26: error: the feature "enum entries" is disabled
    val entries = MyEnum.entries
                         ^^^^^^^
COMPILATION_ERROR
